# vap

./: .gitignore  LICENSE  README.md  README.zh.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: docs.yml  publish.yml
app-vap-tool/: build.gradle.kts
app-vap-tool/src/main/composeResources/values/: strings.xml
app-vap-tool/src/main/composeResources/values-zh/: strings.xml
example-vap-android/: build.gradle.kts
example-vap-android/src/main/: AndroidManifest.xml
example-vap-android/src/main/assets/: hanna_about_card.pag  hanna_home.pag  hanna_touch_wake.pag  hanna_window_speech.pag  hanna_window_think.pag
example-vap-android/src/main/kotlin/com/zxhhyj/vap/: JavaAhbIdentityProbe.kt  (+1 more)
example-vap-desktop/: build.gradle.kts
example-vap-shared/: build.gradle.kts
example-vap-shared/src/commonMain/composeResources/values/: strings.xml
example-vap-shared/src/commonMain/composeResources/values-en/: strings.xml
example-vap-tool/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
vap-compose/: build.gradle.kts
vap-core/: build.gradle.kts
vap-decode/: build.gradle.kts
vap-decode-android/: build.gradle.kts
vap-decode-api/: build.gradle.kts
vap-decode-jvm/: build.gradle.kts
vap-encode/: build.gradle.kts
vap-vk-android/: build.gradle.kts
vap-vk-android/src/main/cpp/: CMakeLists.txt  vap_ahb_probe.cpp  vap_ahb_probe.h  vap_vk_engine.cpp  vap_vk_engine.h  vap_vk_jni.cpp
vap-vk-android/src/main/cpp/shaders/: vap.frag.glsl  vap.vert.glsl  vap_frag_spv.h  vap_vert_spv.h
(+140 files in other folders)
